<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.MainActivity">
    <!--tools:showIn="@layout/activity_main"-->

    <LinearLayout
        android:id="@+id/layout_main_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/dialog_select"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Tips" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="@dimen/activity_vertical_margin2"
            android:text="@string/TasksList"
            android:textColor="#1E90FF"
            android:textSize="22sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_mainInfo_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/dialog_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#e6e6e6"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_select_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin4"
            android:gravity="center"
            android:text="@string/select_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin4"
                android:paddingStart="@dimen/activity_horizontal_margin4"
                android:paddingEnd="@dimen/activity_horizontal_margin4"
                android:text="@string/select_have" />

            <TextView
                android:id="@+id/tv_select_num"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin4"
                android:layout_weight="6"
                android:text="@string/select_num" />

            <TextView
                android:id="@+id/tv_select_invert"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/activity_horizontal_margin4"
                android:layout_weight="4"
                android:background="@drawable/button_white"
                android:gravity="center"
                android:text="@string/select_invert" />

            <TextView
                android:id="@+id/tv_select_all"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/activity_horizontal_margin4"
                android:layout_weight="6"
                android:background="@drawable/button_white"
                android:gravity="center"
                android:text="@string/select_all" />

            <Button
                android:id="@+id/btn_select_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin4"
                android:background="@drawable/button_brown_dark"
                android:text="@string/select_confirm" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>